kubernetes/gateways/gateway-kong/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-ingress
  namespace: default
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /account-service
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  namespace: default
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8083
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: default
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /product
            pathType: Exact
            backend:
              service:
                name: product-service
                port:
                  number: 8084
